[tool.poetry]
name = "generate-python-code"
version = "0.1.0"
description = "Automatically generate Python code using Transformers"
authors = ["AnupJoseph <anup20joseph@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
PyGithub = "^1.55"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = {version = "^21.9b0", allow-prereleases = true}
rich = "^10.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
